// Copyright 2020 The Chromium Authors
// Use of this source code is governed by a BSD-style license that can be
// found in the LICENSE file.

syntax = "proto3";

package unifiedfleet.api.v1.models.chromeos.manufacturing;

option go_package = "infra/unifiedfleet/api/v1/models/chromeos/manufacturing;ufspb";

message ConfigID {
  // The ID that uniquely identifies the hardware configuration of a Chrome OS device.
  string value = 1;
}